A lot of stuff, don't remember all